# spotify_client

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  sample.env  test.py
.github/: dependabot.yml
.github/workflows/: test.yml
requirements/: requirements-dev.txt  requirements.in  requirements.txt
scripts/: format.sh  mypy.sh  test.sh
spotify_client/: __init__.py  auth.py  base_client.py  client.py  exceptions.py  generic_endpoint.py  helpers.py
spotify_client/endpoints/: __init__.py  albums.py  artists.py  audiobooks.py  categories.py  chapters.py  episodes.py  generic_endpoint.py  genres.py  markets.py  playlists.py  shows.py  tracks.py  users.py
tests/: test_spotify_client.py
