[project]
name = "spotify-client"
version = "0.1"
description = "Python wrapper around spotify api"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ismail Tlemcani" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Ismailtlem/spotify-client"
Changelog = "https://github.com/Ismailtlem/spotify-client/releases"
Issues = "https://github.com/Ismailtlem/spotify-client/issues"
CI = "https://github.com/Ismailtlem/spotify-client/actions"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies.dev = {file = ["requirements/requirements-dev.txt"]}

[tool.ruff]
line-length = 100

exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "venv",
]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "F",  # pyflakes
    "E",  # pycodestyle error
    "I",  # isort
    "W",  # pycodestyle warning
    "RUF",    # Ruff-specific rules
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "D", # pycodestyle 
]
ignore=["D100", "D104", "D415"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
strict = true
